--- a/src/templates/productos_destacados.html
+++ b/src/templates/productos_destacados.html
@@ -25,13 +25,13 @@
                                         <i class="fa fa-star gold"></i> {{ equipo.nombre|truncatechars:60 }}
                                     </a>
                                     <p class="clave">{{ equipo.clave }}</p>
-                                    <p class="descripcion">{{  equipo.descripcion|truncatechars:100 }}</p>
+                                    <p class="descripcion">{{  equipo.get_markdown|truncatechars:100 }}</p>
                                     {% if user.is_authenticated %}
                                         <span class="precio">$ {{ equipo.precio }}</span>
                                     {% endif %}
                                 </div>
                                 <div class="footer-tarjeta">
-                                    <a href="{{ equipo.get_absolute_url }}" class="boton" role="button">Ver detalles</a>
+                                    <a href="{{ equipo.get_absolute_url }}" class="btn btn-default btn-block" role="button">Ver detalles</a>
                                 </div>
                             </div><!--.contenedor-tarjeta-->
                         </div>
