--- a/src/templates/equipo_detail.html
+++ b/src/templates/equipo_detail.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
-{% block head_title %}{{ instance.nombre }} | {{ block.super }}{% endblock head_title %}
+{% block head_title %}{{ instance.clave }} | {{ block.super }}{% endblock head_title %}
 {% block content %}
         {% include 'breadcrumb.html' %}
         <div class="contenedor">
