--- a/src/templates/slideshow.html
+++ b/src/templates/slideshow.html
@@ -1,14 +1,15 @@
 {% load static %}
 <!-- slideshow -->
 {% block content %}{#{ forloop.counter0 }#}
-    <div class="container padding-contenedor">
+<div class="slide-width">
+    <div class="container-fluid padding-contenedor">
         <div class="row">
             <div id="carousel-1" class="carousel slide show" data-ride="carousel">
                 <!-- contenedor de los slide -->
                 <div class="carousel-inner" role="listbox">
                     {% for obj in object_slideshow %}
                         <div class="item {% if forloop.counter == 1 %}active{% endif %}" >
-                            <img class="img-responsive" src="{{ obj.imagen.url }}" alt="">
+                            <img class="img-responsive imagen-slideshow" src="{{ obj.imagen.url }}" alt="">
                             <div class="carousel-caption hidden-xs hidden-sm">
                                 <h3 href="{% url 'start:detail' slug=obj.equipo.get_absolute_url }}">{{ obj.titulo}}</h3>
                                 <p>{{ obj.descripcion}}</p>
@@ -28,4 +29,5 @@
             </div>
         </div>
     </div>
+</div>
 {% endblock content %}
